assignments/PA4/tests/bad/bad15.cl
class Main {
    main(x:Noc):Int{1};
};
